# my-wasm-rs-react-vite

./: package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  DataRowRaw.ts  DataRowUI.ts  DataRowUI.tsx  NameCellRenderer.tsx  StringCellRenderer.tsx  benchmark.ts  decoder.ts  formatNumber.tsx  main.tsx  useJSViewportData.ts  useWasmData.ts  useWasmViewportData.ts  wasmData.ts
src/components/: JSGrid.tsx  Navbar.tsx  WasmGrid.tsx
wasm-shared-memory/: .env  Cargo.toml  build.sh  repomix-output.txt  rust-toolchain.toml
wasm-shared-memory/src/: lib.rs
