[package]
name = "wasm-shared-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.77", features = ["console"] }


[lib]
crate-type = ["cdylib"]
